# alandr-raytracer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_sfml.sh
lib/: Camera.cpp  Camera.hpp  Colour.cpp  Colour.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Ray.cpp  Ray.hpp  RenderObject.cpp  RenderObject.hpp  Scene.cpp  Scene.hpp  Vec3f.cpp  Vec3f.hpp  util.cpp  util.hpp
src/: Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  main.cpp
